correct btstrp format. added chicago. added links.

--- a/public/index.html
+++ b/public/index.html
@@ -19,44 +19,31 @@
   </head>
   
   <body>
-    <div class="container-fluid">
-      <div class="banner">
-      	<div class="row">
-          <p class="col-md-1"></p>
-      		<img src="stanford.svg" class="col-md-4">
-          
-      		<h1 class="col-md-2" id="welcome">welcome</h1>
-          
-      		<img src="stanford.svg" class="col-md-4">
-          <p class="col-md-1"></p>
-    	  </div>
 
-        <div class="row">
-          <p></p>
-        </div>
+<div class="container">
+      <div class="row vertical-center-row">
+          <div class="col-lg-12">
+              <div>
+                <div class="row" id="banner" >
+                  <p class="col-md-1"></p>
+                  <img src="chicago.svg" class="col-md-2">
+                  <img src="stanford.svg" class="col-md-2">
+                  <p class="col-md-2" id="welcome">hi, my name is andrew.</p>
+                  <img src="stanford.svg" class="col-md-2">
+                  <img src="chicago.svg" class="col-md-2">
+                  <p class="col-md-1"></p>
+                </div>
 
-        <div class="row">
-          <p class="col-md-1"></p>
-          <p class="col-md-1"></p>
-          <p class="col-md-1"></p>
-          <p class="col-md-1"></p>
-        	<a class="col-md-1">Enter here</a>
-    		  <a class="col-md-1">Or here</a>
-    		  <a class="col-md-1">Or here</a>
-          <p class="col-md-1"></p>
-          <p class="col-md-1"></p>
-          <p class="col-md-1"></p>
-          <p class="col-md-1"></p>
-        </div>
-
-        <div class="row">
-          <p class="col-md-2"></p>
-          <p class="col-md-2"></p>
-        	<a class="col-md-1">Or here</a>
-    		  <a class="col-md-1">Or here</a>
-          <p class="col-md-2"></p>
-          <p class="col-md-2"></p>
-        </div>	
+                <div class="row">
+                  <p class="col-md-2">Learn more:</p>
+                  <a href="bio.html" class="col-md-2">bio</a>
+                  <a href="gym.html" class="col-md-2">gymnastics</a>
+                  <a href="McCabe_Resume.htm" class="col-md-2">resume</a>
+                  <a class="col-md-2">jounalism</a>
+                  <a class="col-md-2">music</a>
+                </div>
+              </div>
+          </div>
       </div>
     </div>
 
