added base for music

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
                   <a href="gym.html" class="col-md-2">gymnastics</a>
                   <a href="McCabe_Resume.htm" class="col-md-2">resume</a>
                   <a class="col-md-2">jounalism</a>
-                  <a class="col-md-2">music</a>
+                  <a href="musics.html" class="col-md-2">music</a>
                 </div>
               </div>
           </div>
