--- a/public/index.html
+++ b/public/index.html
@@ -149,27 +149,27 @@
 
     </div>
     <div id="gym">
-          <h3>Pommel Horse:</h3>
-          <table>
-            <tr>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/zEmmbyuNlMI" frameborder="1" allowfullscreen></iframe>
-            </tr>
-            <tr>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/EH59Afr72k8" frameborder="0" allowfullscreen></iframe>
-            </tr>
-          </table>
-          <h3>Rings:</h3>
-          <table>
-            <tr>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/Z3_-m8MKP4c" frameborder="0" allowfullscreen></iframe>
-            </tr>
-          </table>
-          <h3>Floor:</h3>
-          <table>
-            <tr>
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/Syze_HXysVE" frameborder="0" allowfullscreen></iframe> 
-            </tr>
-          </table>
+      <div class="gym_indent">
+        <table>
+          <tr>
+            <td><h3>Pommel Horse:</h3></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/zEmmbyuNlMI" frameborder="1" allowfullscreen></iframe></td>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/EH59Afr72k8" frameborder="0" allowfullscreen></iframe></td>
+          </tr>
+          <tr>
+            <td><h3>Rings:</h3></td>
+            <td><h3>Floor:</h3></td>
+          </tr>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/Z3_-m8MKP4c" frameborder="0" allowfullscreen></iframe></td>
+            
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/Syze_HXysVE" frameborder="0" allowfullscreen></iframe></td>
+          </tr>
+        </table>
+      </div>
     </div>
 
     <div id="journalism">
@@ -199,12 +199,18 @@
 
         $content = $('#bio');
         $('#bio_tab').click(function() {
+          if (('#bio').className == 'active') {
+            $('#bio').slideToggle(500);
+            $('#bio').background = red;
+          }
+          else {
           $('.active').slideToggle(500);
           $('.active').removeClass('active');
           $('#bio').addClass('active');
           $('#bio').slideToggle(500, function() {
 
           })
+          }
         });
         $('#gym_tab').click(function() {
           $('.active').slideToggle(500);
