added a personal picture in bio

--- a/public/index.html
+++ b/public/index.html
@@ -72,13 +72,14 @@
     <div  id="bio">
       <div class="bio-body">
           <h1>Biography:</h1>
-          <ul>
+          <ul id="list">
             <li><p>My name is Andrew McCabe</p></li>
             <li><p>I was born on January 4th, 1995 in Oak Park, Illinois, a city on the west side of Chicago</p></li>
             <li><p>As my mom will tell you, I’ve been in gymnastics since the day I started flipping on the couch and I’ve been a student athlete ever since I started school (love you mom)</p></li>
             <li><p>Continuing on that path I am currently a sophomore on the Stanford Men’s Gymnastics team studying Symbolic Systems</p></li>
             <li><p>As a result of both an interest in how the mind works, how and why we behave in the ways we do, as well as a semi-obsession with mobile electronics, I hope to finish a concentration in Human Computer Interaction</p></li>
           </ul>
+          <img src="AndrewBWsmaller.jpg">
       </div>
     </div>
 
