replaced placeholder music with final music

--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,10 @@
                   <div class="row">
                     <p class="col-md-2">Learn more:</p>
                     <a class="col-md-2" id="bio_tab">bio</a>
+                    <a class="col-md-2" id="music_tab">music</a>
                     <a class="col-md-2" id="gym_tab">gymnastics</a>
                     <a class="col-md-2" id="resume_tab">resume</a>
                     <a class="col-md-2" id="journ_tab">news</a>
-                    <a class="col-md-2" id="music_tab">music</a>
                   </div> 
 <!--
                   <div class="row">
@@ -182,11 +182,53 @@
     <div id="music">
       <div class="music-body">
           <h2>A short sampling of my favorite artists and songs, because sharing music is fun.</h2>
+          <p>Mumford and Sons:</p>
+          <p></p>
+          <audio controls>
+            <source src="the_cave.mp3" type="audio/ogg">
+            <source src="the_cave.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
           <p>chance:</p>
           <p></p>
           <audio controls>
-            <source src="08 - Favorite Song (ft Childish Gambino) (Prod by Nate Fox) (DatPiff Exclusive).ogg" type="audio/ogg">
-            <source src="08 - Favorite Song (ft Childish Gambino) (Prod by Nate Fox) (DatPiff Exclusive).mp3" type="audio/mpeg">
+            <source src="cocoa_butter_kisses.mp3" type="audio/ogg">
+            <source src="cocoa_butter_kisses.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+          <p>Redbone:</p>
+          <p></p>
+          <audio controls>
+            <source src="come_and_get_your_love.mp3" type="audio/ogg">
+            <source src="come_and_get_your_love.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+          <p>Joey Bad:</p>
+          <p></p>
+          <audio controls>
+            <source src="curry_chicken.mp3" type="audio/ogg">
+            <source src="curry_chicken.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+          <p>Kopecky Family Band:</p>
+          <p></p>
+          <audio controls>
+            <source src="heartbeat.mp3" type="audio/ogg">
+            <source src="heartbeat.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+          <p>Rupert Holmes:</p>
+          <p></p>
+          <audio controls>
+            <source src="escape.mp3" type="audio/ogg">
+            <source src="escape.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+          <p>Marvin Gaye:</p>
+          <p></p>
+          <audio controls>
+            <source src="mountain_high.mp3" type="audio/ogg">
+            <source src="mountain_high.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
       </div>
