minor resume tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
             <li><p>I was born on January 4th, 1995 in Oak Park, Illinois, a city on the west side of Chicago</p></li>
             <li><p>As my mom will tell you, I’ve been in gymnastics since the day I started flipping on the couch and I’ve been a student athlete ever since I started school (love you mom)</p></li>
             <li><p>Continuing on that path I am currently a sophomore on the Stanford Men’s Gymnastics team studying Symbolic Systems</p></li>
-            <li><p>As a result of both an interest in how the mind works, how and why we behave in the ways we do, as well as a semi-obsession with mobile electronics, I hope to finish a concentration in Human Computer Interaction</p></li>
+            <li><p>As a result of both an interest in how the mind works, how and why we behave in the ways we do, as well as a semi-obsession with mobile electronics, I plan to finish a concentration in Human Computer Interaction</p></li>
           </ul>
           <img src="AndrewBWsmaller.jpg">
       </div>
@@ -92,7 +92,7 @@
                 <tr class = "header">
                   <h3>Education</h3>
                   <ul>
-                    <li>Stanford University, 2013 - 2017</li>
+                    <li>Stanford University, 2013 - 2015</li>
                     <li>Pursuing a Bachelors degree with an anticipated major in Symbolic Systems and a specialization in Human Computer Interaction, to be conferred 6/17</li>
                   </ul>
                 </tr>
@@ -102,10 +102,10 @@
                   <ul>
                     <li>Stanford R&DE Summer Staff, Stanford University, Stanford, CA
                       <ul>
-                        <li>Experience working on a team of individuals responsible for keeping a customer service focused business running smoothly under strict time 
+                        <li>Worked on a team of individuals responsible for keeping a customer service focused business running smoothly under strict time 
                           constraints.</li>
-                        <li>Experience with keeping tight records while simultaneously interfacing with customers</li>
-                        <li>Experience working with a diverse group of staff, in a healthy, positive, and friendly environment that fostered growth as individuals and teammates in order to get the job done</li>
+                        <li>Kept tight records while simultaneously interfacing with customers</li>
+                        <li>Worked with a diverse group of staff in a healthy, positive, and friendly environment that fostered growth as individuals and teammates in order to get the job done</li>
                       </ul>
                     </li>
                   </ul>
